# current-lines

./: .gitignore  CMakeLists.txt  Cell.h  Color.h  Coords.h  CrossPoints.h  CurrentLineGenerator.h  FM.msh  Interpolation.h  Line.h  Mesh.cpp  Mesh.h  Node.h  Utils.h  VectorField.h  converted.msh  main.cpp  result.geo  results.geo  shell.nix
.github/workflows/: cmake-multi-platform.yml
bmf/: AbstractFEMMeshFileLoader.h  AbstractResultsFileLoader.cpp  AbstractResultsFileLoader.h  BMFFileLoader.cpp  BMFFileLoader.h  CMakeLists.txt  Defs.h  ElementalFields.h  Mesh.cpp  Mesh.h  SMRFileLoader.cpp  SMRFileLoader.h  bmf  bmf.pro  main.cpp
bmf/data/: sphere.bmf  sphere.smr
models/: create_scalar_field.py  cylinder_tetrahedron.msh  ell.msh  t1.msh  test-3.msh  test.msh
report-tex/: biblio.bib  document.tex  method_cross_product.tex  method_ray_trace.tex  msh_example.tex  msh_format.tex  node_sorting.tex  practice.tex  quad_interpolation.tex  results.tex  theory.tex  trig_interpolation.tex  utils.tex
src/: main.cpp
src/CurrentLineGenerator/: CurrentLine.cpp  CurrentLine.h  CurrentLineGenerator.cpp  CurrentLineGenerator.h  Interpolation.cpp  Interpolation.h
src/Element/: Element.cpp  Element.h  ElementFactory.cpp  ElementFactory.h  GenericElement.cpp  GenericElement.h  QuadrangleElement.cpp  QuadrangleElement.h
src/Element/2D/: Element2D.cpp  Element2D.h  Quadrangle.cpp  Quadrangle.h  Triangle.cpp  Triangle.h
src/Element/3D/: Hexahedron.cpp  Hexahedron.h  Prism.cpp  Prism.h  Tetrahedron.cpp  Tetrahedron.h
src/Element/Common/: Element.cpp  Element.h  ElementFactory.cpp  ElementFactory.h
src/Geometry/: BoundingBox.h  Coords.cpp  Coords.h  CrossPoints.cpp  CrossPoints.h  Element.cpp  Element.h  Geometry.h  Line.cpp  Line.h  Node.cpp  Node.h  Plane.cpp  Plane.h  VectorField.cpp  VectorField.h
src/Loaders/: Loader.cpp  Loader.h
src/Loaders/bmf/: AbstractFEMMeshFileLoader.h  AbstractResultsFileLoader.cpp  AbstractResultsFileLoader.h  Arrays.h  BMFFileLoader.cpp  BMFFileLoader.h  BMFStructures.h  CMakeLists.txt  Mesh.cpp  Mesh.h  MeshStructures.h  NodalFields.cpp  NodalFields.h  SMRFileLoader.cpp  SMRFileLoader.h  bmf.cpp  bmf.h
src/Mesh/: ElementRTree.cpp  ElementRTree.h  Mesh.cpp  Mesh.h
src/Utils/: Algorithms.h  Color.h  Formatter.h  Logger.cpp  Logger.h  Nimpl.cpp  Nimpl.h
